# BomberMapper

./: CMakeLists.txt  cmakewin.sh
cmake/: toolchain-mingw.cmake
include/glad/: glad.h
src/: camera.c  camera.h  drawing.c  drawing.h  glad.c  macros.h  main.c  main.h  structs.h
src/Tiles/: World.c  World.h
src/UI/: Button.c  Button.h  FileUI.c  FileUI.h  UI.c  UI.h
